--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,17 +1,28 @@
-<div class="container mt-4">
-  <form action="/user/login" method="POST">
-     <fieldset>
-       <legend>로그인</legend>
-       <div class="mb-3">
-         <label for="email" class="form-label">이메일</label>
-         <input type="email" id="email" class="form-control" name="email">
-       </div>
-       <div class="mb-3">
-         <label for="password" class="form-label">비밀번호</label>
-         <input type="password" id="password" class="form-control" name="password">
-       </div>
-       <button type="submit" class="btn btn-outline-dark">로그인</button>
-       <a href="/user/register" class="btn btn-outline-success">아이디가 없나요?</a>
-     </fieldset>
-  </form>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>로그인</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+<body>
+  <div class="container mt-4">
+    <form action="/login" method="POST">
+      <fieldset>
+        <legend>로그인</legend>
+        <div class="mb-3">
+          <label for="email" class="form-label">이메일</label>
+          <input type="email" id="email" class="form-control" name="email">
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">비밀번호</label>
+          <input type="password" id="password" class="form-control" name="password">
+        </div>
+        <button type="submit" class="btn btn-outline-dark">로그인</button>
+        <a href="/register" class="btn btn-outline-success">회원가입</a>
+        <a href="/forget-password" class="btn btn-outline-primary">비밀번호 찾기</a>
+      </fieldset>
+    </form>
+  </div>
+</body>
