--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Love Keeper</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Love Keeper</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Love Keeper main page</h1>
+    <legend>Main page</legend>
+    <button id="logoutBtn" class="btn btn-outline-dark">로그아웃</button>
+    <a href="/setting" class="btn btn-outline-primary">설정</a>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <script>
+        $(document).ready(function () {
+            $("#logoutBtn").click(function () {
+                // 서버에 로그아웃 요청
+                $.post("/logout", function (data) {
+                    if (data.success) {
+                        // 로그아웃 성공 시 로그인 페이지로 이동
+                        window.location.href = "/login";
+                    } else {
+                        // 로그아웃 실패 시 처리
+                        console.log("로그아웃 실패");
+                    }
+                });
+            });
+        });
     </script>
 </body>
 </html>
