--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container mt-4">
-    <form action="/user/register" method="POST">
+    <form action="/register" method="POST">
       <fieldset>
         <legend>회원가입</legend>
         <div class="mb-3">
@@ -25,7 +25,12 @@
         </div>
         <div class="mb-3">
           <label for="password" class="form-label">비밀번호</label>
-          <input type="password" id="password" class="form-control" name="password">
+          <input type="password" id="password" class="form-control" name="password" oninput="checkPasswordMatch()">
+        </div>
+        <div class="mb-3">
+          <label for="confirmPassword" class="form-label">비밀번호 확인</label>
+          <input type="password" id="confirmPassword" class="form-control" name="confirmPassword" oninput="checkPasswordMatch()">
+          <p id="passwordMatchText" style="color: red;"></p>
         </div>
         <div class="mb-3">
           <label for="phone" class="form-label">전화번호</label>
@@ -47,23 +52,37 @@
           </select>
         </div>
         <div class="mb-3">
-          <label for="imageUrl" class="form-label">프로필 사진</label>
-          <input type="file" id="imageUrl" class="form-control" name="imageUrl">
+          <label for="avatar" class="form-label">프로필 사진</label>
+          <input type="file" id="avatar" class="form-control" name="avatar">
         </div>
-        <!--
         <div class="mb-3">
-          <label for="birthday" class="form-label">연애시작</label>
-          <input type="date" id="birthday" class="form-control" name="birthday">
+          <label for="startedDate" class="form-label">연애시작</label>
+          <input type="date" id="startedDate" class="form-control" name="startedDate">
         </div>
-        -->
         <div class="mb-3">
           <label for="birthday" class="form-label">생년월일</label>
           <input type="date" id="birthday" class="form-control" name="birthday">
         </div>
         <button id="register" type="submit" class="btn btn-outline-dark">회원가입</button>
-        <a href="/user/login" class="btn btn-outline-primary">뒤로</a>
+        <a href="/login" class="btn btn-outline-primary">뒤로</a>
       </fieldset>
     </form>
   </div>
+
+  <script>
+    function checkPasswordMatch() {
+        const password = document.getElementById("password").value;
+        const confirmPassword = document.getElementById("confirmPassword").value;
+        const passwordMatchText = document.getElementById("passwordMatchText");
+
+        if (password === confirmPassword) {
+            passwordMatchText.textContent = "비밀번호가 일치합니다.";
+            passwordMatchText.style.color = "green";
+        } else {
+            passwordMatchText.textContent = "비밀번호가 일치하지 않습니다.";
+            passwordMatchText.style.color = "red";
+        }
+    }
+</script>
 </body>
 </html>
