--- a/src/views/forget-password.ejs
+++ b/src/views/forget-password.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container mt-4">
-        <form action="/user/forget-password" method="POST">
+        <form action="/forget-password" method="POST">
             <div class="mb-3">
                 <label for="email" class="form-label">이메일</label>
                 <input type="email" id="email" class="form-control" name="email">
