User 스키마 변경, 메일 전송 기능 추가

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -51,10 +51,13 @@
             <option value="AB">AB형</option>
           </select>
         </div>
+
+        <!-- 사진 업로드 부분 -->
         <div class="mb-3">
-          <label for="avatar" class="form-label">프로필 사진</label>
-          <input type="file" id="avatar" class="form-control" name="avatar">
+          <label for="profileImage" class="form-label">프로필 사진 업로드</label>
+          <input type="file" id="profileImage" class="form-control" name="profileImage" accept="image/*">
         </div>
+        
         <div class="mb-3">
           <label for="startedDate" class="form-label">연애시작</label>
           <input type="date" id="startedDate" class="form-control" name="startedDate">
