--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container mt-4">
-    <form action="/register" method="POST">
+    <form action="/register" method="POST" enctype="multipart/form-data">
       <fieldset>
         <legend>회원가입</legend>
         <div class="mb-3">
